--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,23 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/*.js", "use": "@vercel/node" },
-    { "src": "painel/index.html", "use": "@vercel/static" }
+    {
+      "src": "api/*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "painel/index.html",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "/painel/(.*)", "dest": "/painel/index.html" }
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/painel/index.html"
+    }
   ]
 }
